# hello-uv

./: README.md  inspect_imports.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/hello_uv/: __init__.py  cli.py
src/hello_uv/nn/: __init__.py  functional.py  layers.py
src/hello_uv/optim/: sgd.py
tests/: test_basic.py
