[project]
name = "hello-uv"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
hello-uv = "hello_uv.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
